fixed: Adjust element sizes and alignment
- Centered items within the rating container.
- Stretched the Add button across the width.
- Reduced the size of the Back button.
- Aligned the remove button to the leftmost side.

--- a/src/index.css
+++ b/src/index.css
@@ -253,24 +253,10 @@ body {
   font-weight: 600;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 2.4rem;
 }
-
-/*.btn-add {*/
-/*  background-color: var(--color-primary);*/
-/*  color: var(--color-text);*/
-/*  border: none;*/
-/*  border-radius: 10rem;*/
-/*  font-size: 1.4rem;*/
-/*  padding: 1rem;*/
-/*  font-weight: bold;*/
-/*  cursor: pointer;*/
-/*  transition: all 0.3s;*/
-/*}*/
-
-/*.btn-add:hover {*/
-/*  background-color: var(--color-primary-light);*/
-/*}*/
 
 .seconds {
   background-color: var(--color-background-100);
@@ -281,23 +267,6 @@ body {
   padding: 0.4rem;
   margin-top: 2.4rem;
 }
-
-/*.btn-back {*/
-/*  top: 0.6rem;*/
-/*  left: 0.6rem;*/
-/*  height: 3.2rem;*/
-/*  aspect-ratio: 1;*/
-/*  !* background-color: var(--color-text); *!*/
-/*  background-color: #fff;*/
-/*  color: var(--color-background-500);*/
-/*  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);*/
-/*  font-family: sans-serif;*/
-/*  font-size: 2.4rem;*/
-/*  z-index: 9999;*/
-/*  display: flex;*/
-/*  align-items: center;*/
-/*  justify-content: center;*/
-/*}*/
 
 .box::-webkit-scrollbar, .list::-webkit-scrollbar {
   display: none;
@@ -335,6 +304,7 @@ body {
   color: var(--color-background-900);
   font-size: 0.9rem;
   transition: all 0.3s;
+  margin-left: auto;
 }
 
 .btn-delete:hover {
@@ -348,6 +318,8 @@ body {
   font-size: 1.4rem;
   padding: 1rem;
   transition: all 0.3s;
+
+  align-self: stretch;
 }
 
 .btn-add:hover {
@@ -355,16 +327,16 @@ body {
 }
 
 .btn-back {
-  top: 0.6rem;
-  left: 0.6rem;
-  float: left;
-  height: 3.2rem;
+  position: absolute;
+  top: 0.8rem;
+  left: 0.8rem;
+  height: 2.4rem;
   aspect-ratio: 1;
   background-color: #fff;
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   font-family: sans-serif;
-  font-size: 2.4rem;
+  font-size: 1.6rem;
   z-index: 999;
   display: flex;
   align-items: center;
@@ -460,7 +432,7 @@ body {
   }
 
   .box-header {
-    padding: 2.2rem 1.6rem 1.8rem;
+    padding: 2.4rem 1.6rem;
     border-radius: 0;
   }
 
